--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Samantha Huang</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,22 +17,20 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<h1 id="logo"><a href="#">Samantha Huang</a></h1>
+					<p>I was a product manager<br />
+					and now I'm a computer science student</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#one" class="active">ABOUT</a></li>
+						<li><a href="#two">SKILLS</a></li>
+						<li><a href="#three">WORK</a></li>
+						<li><a href="#four">CONTACT</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -53,26 +51,28 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
+										<h2>Learning Today, Building Tomorrow</h2>
+										<!--
 										<p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										-->
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>I've dedicated my career to building efficient products that improve workforce productivity and data analysis workflows. Now, I’m deepening my understanding of technology and data science to enhance my ability to contribute to data-driven solutions and build innovative products that make an impact.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>SKILLS</h3>
+									<p>Every person is known for some of their skills and abilities. Here are some of mine. Important ones!</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-users">Product Design</li>
+										<li class="icon solid fa-code">Product Management</li>
+										<li class="icon solid fa-cubes">User Research</li>
+										<li class="icon solid fa-book">Marketing Researach</li>
+										<li class="icon solid fa-coffee">C, Java, Python</li>
+										<li class="icon solid fa-bolt">SQL (MySQL, SQLite)</li>
 									</ul>
 								</div>
 							</section>
@@ -80,28 +80,28 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
+									<h3>Product Experience</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
 									<div class="features">
 										<article>
+											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Data Visualisation</h4>
+												<p>Led the end-to-end product design of a data visualization dashboard system, collaborating closely with cross-functional teams to ensure seamless development and delivery. Focused on enhancing data accessibility for key stakeholders, resulting in improved data-driven decision-making across departments.</p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Virtual Learning</h4>
+												<p>Managed an agile development team to drive the implementation of a virtual learning platform. Focused on optimizing the product operations system to streamline user engagement, improve platform scalability, and support ongoing content delivery. Ensured adherence to agile best practices, fostering continuous improvement and collaboration.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Sharing Bike</h4>
+												<p>Owned the WeChat product management for the Sharing Bike service in China, overseeing feature maintenance and leading customer retention initiatives. Implemented strategies to enhance user engagement, achieving higher customer loyalty and improving the overall user experience for the platform’s growing base in the region.</p>
 											</div>
 										</article>
 									</div>
@@ -111,8 +111,9 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>CONTACT ME</h3>
+									<p>I'm always up for a chat. <br />
+									Let's set a meeting time or a coffee time!</p>
 									<form method="post" action="#">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -131,7 +132,6 @@
 							</section>
 
 						<!-- Five -->
-						<!--
 							<section id="five">
 								<div class="container">
 									<h3>Elements</h3>
@@ -459,7 +459,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								</div>
 							</section>
-						-->
 
 					</div>
 
