--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+        <script type="text/javascript">
+		// Initialize EmailJS with your Public Key (User ID)
+	    mailjs.init('fwMhO9Asp5-ZCwplo');  // Replace with your Public Key (User ID)
+
+        // Send email on form submission
+        function sendEmail(event) {
+	        event.preventDefault();  // Prevent the form from submitting normally
+
+	        emailjs.sendForm('samanthawhee', 'template_hpzo3j2', event.target)  // Service ID and Template ID
+		        .then(function(response) {
+			        alert('Message sent successfully!');
+		        }, function(error) {
+			        alert('Failed to send message: ' + error);
+		        });
+            }
+        </script>
 	</head>
 	<body class="is-preload">
 
@@ -108,27 +125,27 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
-								<div class="container">
-									<h3>CONTACT ME</h3>
-									<p>I'm always up for a chat. <br />
-									Let's set a meeting time or a coffee time!</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
+						<section id="four">
+							<div class="container">
+								<h3>CONTACT ME</h3>
+								<p>I'm always up for a chat. <br /> Let's set a meeting time or a coffee time!</p>
+								<!-- Add the onsubmit event handler to the form -->
+								<form method="post" id="contact-form" onsubmit="sendEmail(event)">
+									<div class="row gtr-uniform">
+										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" required /></div>
+										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required /></div>
+										<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" required /></div>
+										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6" required></textarea></div>
+										<div class="col-12">
+											<ul class="actions">
+												<li><input type="submit" class="primary" value="Send Message" /></li>
+												<li><input type="reset" value="Reset Form" /></li>
+											</ul>
 										</div>
-									</form>
-								</div>
-							</section>
+									</div>
+								</form>
+							</div>
+						</section>
 					</div>
 
 				<!-- Footer -->
