--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
 
         // Send email on form submission
         function sendEmail(event) {
-	        event.preventDefault();  // Prevent the form from submitting normally
+            event.preventDefault();  // Prevent the form from submitting normally
 
-	        emailjs.sendForm('samanthawhee', 'template_hpzo3j2', event.target)  // Service ID and Template ID
-		        .then(function(response) {
-			        alert('Message sent successfully!');
-		        }, function(error) {
-			        alert('Failed to send message: ' + error);
-		        });
+            emailjs.sendForm('samanthawhee', 'template_hpzo3j2', event.target)  // Service ID and Template ID
+                .then(function(response) {
+                    alert('Message sent successfully!');
+                }, function(error) {
+                    console.error('Error sending email:', error); // Log the error in the console
+                    alert('Failed to send message: ' + error.text); // Display the actual error message from EmailJS
+                });
             }
-        </script>
+		</script>
+	
 	</head>
 	<body class="is-preload">
 
