emailjs.init('pMxSihy3OHx2E_pOC');

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
         <script type="text/javascript">
 		// Initialize EmailJS with your Public Key (User ID)
-	    mailjs.init('pMxSihy3OHx2E_pOC');  // Replace with your Public Key (User ID)
+	    emailjs.init('pMxSihy3OHx2E_pOC');  // Replace with your Public Key (User ID)
 
         // Send email on form submission
         function sendEmail(event) {
