Change the colour and add Google Analytics snippet

--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
                 });
             }
 		</script>
-	
+		<!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-H35Z31WW5P"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-H35Z31WW5P');
+        </script>
 	</head>
 	<body class="is-preload">
 
@@ -34,8 +42,8 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Samantha Huang</a></h1>
-					<p>I was a product manager<br />
-					and now I'm a computer science student</p>
+					<p>Former product manager,<br />
+					now a computer science student.</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -87,7 +95,7 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-pen">Product Design</li>
 										<li class="icon solid fa-bars-progress">Product Management</li>
-										<li class="icon solid fa-user">User Research</li>
+										<li class="icon solid fa-comments">Project Development</li>
 										<li class="icon solid fa-magnifying-glass">Marketing Researach</li>
 										<li class="icon solid fa-code">C, Java, Python</li>
 										<li class="icon solid fa-database">SQL (MySQL, SQLite)</li>
@@ -118,7 +126,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Sharing Bike</h4>
 												<p>Oversaw product management for WeChat’s Sharing Bike service, focusing on feature maintenance and customer retention to enhance user engagement and loyalty.</p>
